# tavily-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/: _client.py  main.py  server.py
src/tavily/: __init__.py  tools.py  types.py
tests/: conftest.py  test_connection_live.py  test_tools.py
